--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
+server.port=7070
+
 ## PostgreSQL
-dataSource.driverClassName=org.postgresql.Driver
-dataSource.url=jdbc:postgresql://localhost:5432/postgres
-dataSource.username=postgres
-dataSource.password=Kp0kyc89Ufsin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Kp0kyc89Ufsin
 
 # create and drop table, good for testing, production set to none or comment it
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
 
 
