--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=7070
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Kp0kyc89Ufsin
+spring.datasource.password=
 
 # create and drop table, good for testing, production set to none or comment it
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
