--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,14 @@ server.port=7070
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=Kp0kyc89Ufsin
 
 # create and drop table, good for testing, production set to none or comment it
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-
+# App Properties
+app.jwtSecret=sdkfhjksdhjfoiuisdfsdf78sd7f9hcs9889hhf8hw94hbnfcb74
+app.jwtLifetime=30m
+spring.main.allow-circular-references=true
